--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <title>day1/100 ５２歳おじのコーディング学習</title>
 </head>
 <body>
-    <h1>Day1 ５２歳おじのコーディング学習</h1>
+    <h1>Day1/100 ５２歳おじのコーディング学習</h1>
     <p>記念すべき第一日目</p>
     スクリプトは以下に表示されるよ<br/
     <script src="index2.js"></script>
