--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>day1/100 ５２歳おじのコーディング学習</title>
+    <title>day1/100 ５２歳おじのコーディング学習のはじまり</title>
 </head>
 <body>
-    <h1>Day1 ５２歳おじのコーディング学習</h1>
+    <h1>Day1 ５２歳おじのコーディング学習のはじまり</h1>
     <p>記念すべき第一日目</p>
-    スクリプトは以下に表示されるよ<br/
+    スクリプトは以下に表示されるよ<br/>
     <script src="index2.js"></script>
     <h2>コンソールより愛を込めて、、、</h2>
     <p>ちなみにブログもやってるよ
