--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Day1/100 ５２歳おじのコーディング学習</h1>
     <p>記念すべき第一日目</p>
-    スクリプトは以下に表示されるよ<br/
+    スクリプトは以下に表示されるよ<br/>
     <script src="index2.js"></script>
     <h2>コンソールより愛を込めて、、、</h2>
     <p>ちなみにブログもやってるよ
