Day1/100 表記微調整

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>day1/100 ５２歳おじのコーディング学習のはじまり</title>
+    <title>Day1/100 ５２歳おじのコーディング学習のはじまり</title>
 </head>
 <body>
-    <h1>Day1 ５２歳おじのコーディング学習のはじまり</h1>
+    <h1>Day1/100 ５２歳おじのコーディング学習のはじまり</h1>
     <p>記念すべき第一日目</p>
     スクリプトは以下に表示されるよ<br/>
     <script src="index2.js"></script>
