--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,14 @@
 <body>
     <h1>Day1/100 コンソールより愛を込めて　５２歳おじのコーディング学習</h1>
     <p>記念すべき第一日目</p>
-    スクリプトは以下に表示されるよ<br/>
+    <p id="out1"></p>
+    <p id="out2"></p>
+    <p id="out3"></p>
+    <p id="out4"></p>
+    <p id="out5"></p>
+    <p id="out6"></p>
+    <p id="out7"></p>
+    スクリプトは以下に表示されるよん<br/>
     <script src="index2.js"></script>
     <h2>コンソールより愛を込めて、、、</h2>
     <p>ちなみにブログもやってるよ
