青色申告決算書シミュレーター 0.01

--- a/index4.html
+++ b/index4.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>青色申告決算書シミュレーター</title>
+    <title>青色申告決算書シミュレーター 0.01</title>
     <style>
       :root {
         --line-color: #2e7d32;
