--- a/index6.html
+++ b/index6.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>所得税青色申告決算書 全8ページ完全再現版</title>
+    <title>所得税青色申告決算書 全4ページ完全再現版</title>
     <style>
       :root {
         --line-green: #2e7d32;
@@ -14,7 +14,8 @@
         font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        /*もともとはcenter*/
+        align-items: left;
         padding: 20px;
       }
       .page-container {
@@ -158,13 +159,13 @@
           <td colspan="2">売上(収入)金額</td>
           <td class="col-num">①</td>
           <td><input type="text" id="f1" class="calc" onblur="fmt(this)" /></td>
-          <td rowspan="8" style="writing-mode: vertical-rl">経費</td>
+          <td rowspan="13" style="writing-mode: vertical-rl">経費</td>
           <td>租税公課</td>
           <td class="col-num">⑧</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td rowspan="10" style="writing-mode: vertical-rl">各種引当金・準備金等</td>
           <td>貸倒引当金</td>
-          <td class="col-num">34</td>
+          <td class="col-num">㉞</td>
           <td><input type="text" class="calc" onblur="fmt(this)" /></td>
         </tr>
         <tr>
@@ -176,7 +177,7 @@
           <td class="col-num">⑨</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>(繰戻額等)</td>
-          <td class="col-num">35</td>
+          <td class="col-num">㉟</td>
           <td><input type="text" class="calc" onblur="fmt(this)" /></td>
         </tr>
         <tr>
@@ -187,7 +188,7 @@
           <td class="col-num">⑩</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td></td>
-          <td class="col-num">36</td>
+          <td class="col-num">㊱</td>
           <td><input type="text" class="calc" onblur="fmt(this)" /></td>
         </tr>
         <tr>
@@ -198,7 +199,7 @@
           <td class="col-num">⑪</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>計</td>
-          <td class="col-num">37</td>
+          <td class="col-num">㊲</td>
           <td><input type="text" id="f37" class="readonly" /></td>
         </tr>
         <tr>
@@ -209,7 +210,7 @@
           <td class="col-num">⑫</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>専従者給与</td>
-          <td class="col-num">38</td>
+          <td class="col-num">㊳</td>
           <td><input type="text" id="f38" class="calc" onblur="fmt(this)" /></td>
         </tr>
         <tr>
@@ -220,7 +221,7 @@
           <td class="col-num">⑬</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>貸倒引当金</td>
-          <td class="col-num">39</td>
+          <td class="col-num">㊴</td>
           <td><input type="text" class="calc" onblur="fmt(this)" /></td>
         </tr>
         <tr>
@@ -231,7 +232,7 @@
           <td class="col-num">⑭</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>(繰入額等)</td>
-          <td class="col-num">40</td>
+          <td class="col-num">㊵</td>
           <td><input type="text" class="calc" onblur="fmt(this)" /></td>
         </tr>
         <tr>
@@ -240,16 +241,16 @@
           <td class="col-num">⑮</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td></td>
-          <td class="col-num">41</td>
+          <td class="col-num">㊶</td>
           <td><input type="text" class="calc" onblur="fmt(this)" /></td>
         </tr>
         <tr>
-          <td rowspan="4" style="writing-mode: vertical-rl">費</td>
+          <!-- <td rowspan="4" style="writing-mode: vertical-rl">費</td> -->
           <td>修繕費</td>
           <td class="col-num">⑯</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>計</td>
-          <td class="col-num">42</td>
+          <td class="col-num">㊷</td>
           <td><input type="text" id="f42" class="readonly" /></td>
         </tr>
         <tr>
@@ -257,7 +258,7 @@
           <td class="col-num">⑰</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td colspan="2">特別控除前所得</td>
-          <td class="col-num">43</td>
+          <td class="col-num">㊸</td>
           <td><input type="text" id="f43" class="readonly" /></td>
         </tr>
         <tr>
@@ -266,23 +267,23 @@
           <td class="col-num">⑱</td>
           <td><input type="text" id="f18" class="calc exp" onblur="fmt(this)" /></td>
           <td colspan="2">青色申告特別控除額</td>
-          <td class="col-num">44</td>
+          <td class="col-num">㊹</td>
           <td><input type="text" id="f44" value="650,000" class="calc" onblur="fmt(this)" /></td>
         </tr>
         <tr>
           <td colspan="2">雑費</td>
-          <td class="col-num">31</td>
+          <td class="col-num">㉛</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>福利厚生費</td>
           <td class="col-num">⑲</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td colspan="2" style="background: #c8e6c9; font-weight: bold">所 得 金 額</td>
-          <td class="col-num">45</td>
+          <td class="col-num">㊺</td>
           <td><input type="text" id="f45" class="readonly" style="background: #c8e6c9" /></td>
         </tr>
         <tr>
           <td colspan="2" style="background: var(--bg-pale)">計</td>
-          <td class="col-num">32</td>
+          <td class="col-num">㉜</td>
           <td><input type="text" id="f32" class="readonly" /></td>
           <td>給料賃金</td>
           <td class="col-num">⑳</td>
