index6.html ページ1見た目修正

--- a/index6.html
+++ b/index6.html
@@ -164,7 +164,7 @@
           <td class="col-num">⑧</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td rowspan="10" style="writing-mode: vertical-rl">各種引当金・準備金等</td>
-          <td>貸倒引当金</td>
+          <td>繰戻貸倒引当金</td>
           <td class="col-num">㉞</td>
           <td><input type="text" class="calc" onblur="fmt(this)" /></td>
         </tr>
@@ -220,7 +220,7 @@
           <td>広告宣伝費</td>
           <td class="col-num">⑬</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
-          <td>貸倒引当金</td>
+          <td>繰入貸倒引当金</td>
           <td class="col-num">㊴</td>
           <td><input type="text" class="calc" onblur="fmt(this)" /></td>
         </tr>
@@ -257,7 +257,7 @@
           <td>消耗品費</td>
           <td class="col-num">⑰</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
-          <td colspan="2">特別控除前所得</td>
+          <td colspan="2">特別控除前所得(33-37+42)</td>
           <td class="col-num">㊸</td>
           <td><input type="text" id="f43" class="readonly" /></td>
         </tr>
