--- a/index6.html
+++ b/index6.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>所得税青色申告決算書 全4ページ完全再現版</title>
+    <title>所得税青色申告決算書 完全再現版（経費項目拡充）</title>
     <style>
       :root {
         --line-green: #2e7d32;
@@ -14,7 +14,6 @@
         font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
         display: flex;
         flex-direction: column;
-        /*もともとはcenter*/
         align-items: left;
         padding: 20px;
       }
@@ -52,7 +51,6 @@
         left: 10px;
         top: 100px;
       }
-
       table {
         width: 100%;
         border-collapse: collapse;
@@ -77,7 +75,6 @@
         background: var(--bg-pale);
         font-size: 9px;
       }
-
       input {
         width: 100%;
         border: none;
@@ -95,7 +92,6 @@
         pointer-events: none;
         font-weight: bold;
       }
-
       .section-title {
         background: var(--bg-pale);
         font-weight: bold;
@@ -166,7 +162,7 @@
           <td rowspan="10" style="writing-mode: vertical-rl">各種引当金・準備金等</td>
           <td>繰戻貸倒引当金</td>
           <td class="col-num">㉞</td>
-          <td><input type="text" class="calc" onblur="fmt(this)" /></td>
+          <td><input type="text" class="calc res-rev" onblur="fmt(this)" /></td>
         </tr>
         <tr>
           <td rowspan="5" style="writing-mode: vertical-rl">売上原価</td>
@@ -178,7 +174,7 @@
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>(繰戻額等)</td>
           <td class="col-num">㉟</td>
-          <td><input type="text" class="calc" onblur="fmt(this)" /></td>
+          <td><input type="text" class="calc res-rev" onblur="fmt(this)" /></td>
         </tr>
         <tr>
           <td>仕入金額</td>
@@ -189,7 +185,7 @@
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td></td>
           <td class="col-num">㊱</td>
-          <td><input type="text" class="calc" onblur="fmt(this)" /></td>
+          <td><input type="text" class="calc res-rev" onblur="fmt(this)" /></td>
         </tr>
         <tr>
           <td>小計 (②+③)</td>
@@ -198,7 +194,7 @@
           <td>旅費交通費</td>
           <td class="col-num">⑪</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
-          <td>計</td>
+          <td>計 (㉞+㉟+㊱)</td>
           <td class="col-num">㊲</td>
           <td><input type="text" id="f37" class="readonly" /></td>
         </tr>
@@ -211,7 +207,7 @@
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>専従者給与</td>
           <td class="col-num">㊳</td>
-          <td><input type="text" id="f38" class="calc" onblur="fmt(this)" /></td>
+          <td><input type="text" id="f38" class="calc res-exp" onblur="fmt(this)" /></td>
         </tr>
         <tr>
           <td>差引原価(④-⑤)</td>
@@ -222,7 +218,7 @@
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>繰入貸倒引当金</td>
           <td class="col-num">㊴</td>
-          <td><input type="text" class="calc" onblur="fmt(this)" /></td>
+          <td><input type="text" class="calc res-exp" onblur="fmt(this)" /></td>
         </tr>
         <tr>
           <td colspan="2">差引金額 (①-⑥)</td>
@@ -233,23 +229,22 @@
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td>(繰入額等)</td>
           <td class="col-num">㊵</td>
-          <td><input type="text" class="calc" onblur="fmt(this)" /></td>
+          <td><input type="text" class="calc res-exp" onblur="fmt(this)" /></td>
         </tr>
         <tr>
-          <td colspan="4" rowspan="3" style="font-size: 9px; vertical-align: top; padding: 10px">※この青色申告決算書は機械で読み取りますので、黒のボールペンで書いてください。 [cite: 314]</td>
+          <td colspan="4" rowspan="3" style="font-size: 9px; vertical-align: top; padding: 10px">※この青色申告決算書は機械で読み取りますので、黒のボールペンで書いてください。</td>
           <td>損害保険料</td>
           <td class="col-num">⑮</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td></td>
           <td class="col-num">㊶</td>
-          <td><input type="text" class="calc" onblur="fmt(this)" /></td>
+          <td><input type="text" class="calc res-exp" onblur="fmt(this)" /></td>
         </tr>
         <tr>
-          <!-- <td rowspan="4" style="writing-mode: vertical-rl">費</td> -->
           <td>修繕費</td>
           <td class="col-num">⑯</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
-          <td>計</td>
+          <td>計 (㊳から㊶まで)</td>
           <td class="col-num">㊷</td>
           <td><input type="text" id="f42" class="readonly" /></td>
         </tr>
@@ -257,37 +252,57 @@
           <td>消耗品費</td>
           <td class="col-num">⑰</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
-          <td colspan="2">特別控除前所得(33-37+42)</td>
+          <td colspan="2">特別控除前所得(㉝+㊲-㊷)</td>
           <td class="col-num">㊸</td>
           <td><input type="text" id="f43" class="readonly" /></td>
         </tr>
         <tr>
-          <td colspan="4"></td>
-          <td>減価償却費</td>
+          <td colspan="2">減価償却費</td>
           <td class="col-num">⑱</td>
           <td><input type="text" id="f18" class="calc exp" onblur="fmt(this)" /></td>
+          <td>福利厚生費</td>
+          <td class="col-num">⑲</td>
+          <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
           <td colspan="2">青色申告特別控除額</td>
           <td class="col-num">㊹</td>
           <td><input type="text" id="f44" value="650,000" class="calc" onblur="fmt(this)" /></td>
         </tr>
         <tr>
-          <td colspan="2">雑費</td>
-          <td class="col-num">㉛</td>
+          <td colspan="2">給料賃金</td>
+          <td class="col-num">⑳</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
-          <td>福利厚生費</td>
-          <td class="col-num">⑲</td>
+          <td>利子割引料</td>
+          <td class="col-num">㉒</td>
           <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
-          <td colspan="2" style="background: #c8e6c9; font-weight: bold">所 得 金 額</td>
+          <td colspan="2" style="background: #c8e6c9; font-weight: bold">所 得 金 額 (㊸-㊹)</td>
           <td class="col-num">㊺</td>
           <td><input type="text" id="f45" class="readonly" style="background: #c8e6c9" /></td>
         </tr>
         <tr>
-          <td colspan="2" style="background: var(--bg-pale)">計</td>
+          <td colspan="2">外注工賃</td>
+          <td class="col-num">㉑</td>
+          <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
+          <td>地代家賃</td>
+          <td class="col-num">㉓</td>
+          <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
+          <td colspan="4"></td>
+        </tr>
+        <tr>
+          <td colspan="2" class="label">貸倒金</td>
+          <td class="col-num">㉔</td>
+          <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
+          <td colspan="2" class="label">雑費</td>
+          <td class="col-num">㉛</td>
+          <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
+          <td colspan="4"></td>
+        </tr>
+        <tr style="background: var(--bg-pale)">
+          <td colspan="2">経費計</td>
           <td class="col-num">㉜</td>
           <td><input type="text" id="f32" class="readonly" /></td>
-          <td>給料賃金</td>
-          <td class="col-num">⑳</td>
-          <td><input type="text" class="calc exp" onblur="fmt(this)" /></td>
+          <td colspan="2">差引金額 (⑦-㉜)</td>
+          <td class="col-num">㉝</td>
+          <td><input type="text" id="f33" class="readonly" /></td>
           <td colspan="4"></td>
         </tr>
       </table>
@@ -296,7 +311,7 @@
 
     <div class="page-container" id="p2">
       <div class="page-tag">提出用</div>
-      <div class="section-title">○ 月別売上（収入）金額及び仕入金額 [cite: 413]</div>
+      <div class="section-title">○ 月別売上（収入）金額及び仕入金額</div>
       <table>
         <tr>
           <th>月</th>
@@ -366,7 +381,7 @@
 
     <div class="page-container" id="p3">
       <div class="page-tag">提出用</div>
-      <div class="section-title">○ 減価償却費の計算 [cite: 427]</div>
+      <div class="section-title">○ 減価償却費の計算</div>
       <table>
         <tr>
           <th>資産名称</th>
@@ -377,18 +392,10 @@
           <th>未償却残高</th>
         </tr>
         <tr>
-          <td><input type="text" placeholder="例：車両" /></td>
+          <td><input type="text" placeholder="例：PC" /></td>
           <td><input type="text" onblur="fmt(this)" /></td>
           <td><input type="text" onblur="fmt(this)" /></td>
           <td><input type="text" style="text-align: center" /></td>
-          <td><input type="text" class="d-val" oninput="sumD()" onblur="fmt(this)" /></td>
-          <td><input type="text" onblur="fmt(this)" /></td>
-        </tr>
-        <tr>
-          <td><input type="text" /></td>
-          <td><input type="text" onblur="fmt(this)" /></td>
-          <td><input type="text" onblur="fmt(this)" /></td>
-          <td><input type="text" /></td>
           <td><input type="text" class="d-val" oninput="sumD()" onblur="fmt(this)" /></td>
           <td><input type="text" onblur="fmt(this)" /></td>
         </tr>
@@ -404,9 +411,7 @@
 
     <div class="page-container" id="p4">
       <div class="page-tag">提出用</div>
-      <div class="page-header">
-        <div class="form-title">貸 借 対 照 表 [cite: 442]</div>
-      </div>
+      <div class="page-header"><div class="form-title">貸 借 対 照 表</div></div>
       <div style="display: flex; gap: 10px">
         <table style="width: 50%">
           <tr>
@@ -447,12 +452,12 @@
             <td><input type="text" class="liab-e" oninput="sumBS()" onblur="fmt(this)" /></td>
           </tr>
           <tr>
-            <td colspan="2">元入金 [cite: 452]</td>
+            <td colspan="2">元入金</td>
             <td><input type="text" onblur="fmt(this)" /></td>
             <td><input type="text" class="liab-e" oninput="sumBS()" onblur="fmt(this)" /></td>
           </tr>
           <tr>
-            <td colspan="2">今期所得(43番)</td>
+            <td colspan="2">今期所得(㊸番)</td>
             <td><input type="text" class="readonly" /></td>
             <td><input type="text" id="bs_income" class="readonly" /></td>
           </tr>
@@ -463,17 +468,6 @@
           </tr>
         </table>
       </div>
-      <div class="section-title" style="margin-top: 20px">○ 製造原価の計算（該当者のみ） [cite: 448]</div>
-      <table>
-        <tr>
-          <td>期首材料</td>
-          <td><input type="text" onblur="fmt(this)" /></td>
-          <td>労務費</td>
-          <td><input type="text" onblur="fmt(this)" /></td>
-          <td>外注工賃</td>
-          <td><input type="text" onblur="fmt(this)" /></td>
-        </tr>
-      </table>
       <div class="footer-num">- 4 -</div>
     </div>
 
@@ -487,7 +481,8 @@
         return parseFloat(String(str).replace(/,/g, "")) || 0;
       }
       function set(id, v) {
-        document.getElementById(id).value = nf.format(v);
+        const el = document.getElementById(id);
+        if (el) el.value = nf.format(v);
       }
 
       function sumM() {
@@ -533,22 +528,38 @@
         const f7 = f1 - f6;
         set("f7", f7);
 
+        // 経費計 ㉜
         let expSum = 0;
         document.querySelectorAll(".exp").forEach((e) => (expSum += val(e.value)));
         set("f32", expSum);
 
+        // 差引金額 ㉝
         const f33 = f7 - expSum;
-        const f42 = val(document.getElementById("f37").value) + val(document.getElementById("f38").value); // 簡略化
-        set("f43", f33);
+        set("f33", f33);
 
+        // 引当金繰戻計 ㊲
+        let revSum = 0;
+        document.querySelectorAll(".res-rev").forEach((e) => (revSum += val(e.value)));
+        set("f37", revSum);
+
+        // 引当金・専従者給与計 ㊷
+        let resExpSum = 0;
+        document.querySelectorAll(".res-exp").forEach((e) => (resExpSum += val(e.value)));
+        set("f42", resExpSum);
+
+        // 特別控除前所得 ㊸
+        const f43 = f33 + revSum - resExpSum;
+        set("f43", f43);
+
+        // 所得金額 ㊺
         const f44 = val(document.getElementById("f44").value);
-        const ded = Math.min(Math.max(0, f33), f44);
-        set("f45", f33 - ded);
+        const ded = Math.min(Math.max(0, f43), f44);
+        set("f45", f43 - ded);
 
         // BS連動
         document.getElementById("bs_inv_s").value = nf.format(f2);
         document.getElementById("bs_inv_e").value = nf.format(f5);
-        document.getElementById("bs_income").value = nf.format(f33);
+        document.getElementById("bs_income").value = nf.format(f43);
         sumBS();
       }
     </script>
