--- a/index6.html
+++ b/index6.html
@@ -292,24 +292,151 @@
     </div>
 
     <div class="page-container" id="p2">
-      <div class="form-title">月別売上・仕入金額</div>
-      <table>
-        <tr>
-          <th>月</th>
-          <th>売上金額</th>
-          <th>仕入金額</th>
-          <th>月</th>
-          <th>売上金額</th>
-          <th>仕入金額</th>
-        </tr>
-        <tbody id="month-rows"></tbody>
-        <tr style="background: #eee">
-          <td>計</td>
-          <td><input type="text" id="ms_total" class="readonly" /></td>
-          <td><input type="text" id="mc_total" class="readonly" /></td>
-          <td colspan="3"></td>
-        </tr>
-      </table>
+      <div style="display: flex; justify-content: space-between; align-items: flex-end">
+        <div style="font-size: 20px">令和 <input type="text" style="width: 30px; border-bottom: 1px solid #000" /> 年分</div>
+        <div class="form-title" style="width: 50%; border-bottom: none">所得税青色申告決算書（一般用）</div>
+        <div style="text-align: right; font-size: 12px">[提出用] FA3025</div>
+      </div>
+
+      <div style="display: flex; gap: 20px; margin-top: 10px">
+        <div style="flex: 1">
+          <div style="font-size: 12px; font-weight: bold; margin-bottom: 5px">○月別売上（収入）金額及び仕入金額</div>
+          <table>
+            <colgroup>
+              <col width="15%" />
+              <col width="42.5%" />
+              <col width="42.5%" />
+            </colgroup>
+            <tr>
+              <th>月</th>
+              <th>売上（収入）金額</th>
+              <th>仕 入 金 額</th>
+            </tr>
+            <tbody id="month-grid"></tbody>
+            <tr>
+              <td>家事消費等</td>
+              <td><input type="text" class="m-s" oninput="sumM()" onblur="fmt(this)" /></td>
+              <td style="background: #eee"></td>
+            </tr>
+            <tr>
+              <td>雑収入</td>
+              <td><input type="text" class="m-s" oninput="sumM()" onblur="fmt(this)" /></td>
+              <td style="background: #eee"></td>
+            </tr>
+            <tr style="background: var(--bg-pale)">
+              <td>計</td>
+              <td><input type="text" id="ms_total" class="readonly" /></td>
+              <td><input type="text" id="mc_total" class="readonly" /></td>
+            </tr>
+          </table>
+        </div>
+
+        <div style="flex: 1.2">
+          <div style="font-size: 12px; font-weight: bold; margin-bottom: 5px">○給料賃金の内訳</div>
+          <table style="margin-bottom: 15px">
+            <tr>
+              <th>氏名</th>
+              <th>年齢</th>
+              <th>従事月</th>
+              <th>支給額計</th>
+              <th>源泉徴収税</th>
+            </tr>
+            <tr>
+              <td><input type="text" class="text-left" /></td>
+              <td><input type="text" /></td>
+              <td><input type="text" /></td>
+              <td><input type="text" class="sal-val" oninput="sumSal()" onblur="fmt(this)" /></td>
+              <td><input type="text" onblur="fmt(this)" /></td>
+            </tr>
+            <tr>
+              <td><input type="text" class="text-left" /></td>
+              <td><input type="text" /></td>
+              <td><input type="text" /></td>
+              <td><input type="text" class="sal-val" oninput="sumSal()" onblur="fmt(this)" /></td>
+              <td><input type="text" onblur="fmt(this)" /></td>
+            </tr>
+            <tr style="background: #eee">
+              <td>計</td>
+              <td colspan="2"></td>
+              <td><input type="text" id="sal_total" class="readonly" /></td>
+              <td></td>
+            </tr>
+          </table>
+
+          <div style="font-size: 12px; font-weight: bold; margin-bottom: 5px">○専従者給与の内訳</div>
+          <table>
+            <tr>
+              <th>氏名</th>
+              <th>続柄</th>
+              <th>年齢</th>
+              <th>支給額計</th>
+              <th>源泉徴収税</th>
+            </tr>
+            <tr>
+              <td><input type="text" class="text-left" /></td>
+              <td><input type="text" /></td>
+              <td><input type="text" /></td>
+              <td><input type="text" class="family-sal" oninput="sumFam()" onblur="fmt(this)" /></td>
+              <td><input type="text" onblur="fmt(this)" /></td>
+            </tr>
+            <tr style="background: #eee">
+              <td>計</td>
+              <td colspan="2"></td>
+              <td><input type="text" id="fam_total" class="readonly" /></td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+      <div style="display: flex; gap: 20px; margin-top: 15px">
+        <div style="flex: 1">
+          <div style="font-size: 12px; font-weight: bold; margin-bottom: 5px">○貸倒引当金繰入額の計算</div>
+          <table>
+            <tr>
+              <td style="width: 70%">個別評価による繰入額</td>
+              <td class="col-num">①</td>
+              <td><input type="text" id="bad_debt_1" oninput="calcBadDebt()" onblur="fmt(this)" /></td>
+            </tr>
+            <tr>
+              <td>一括評価対象の債権合計</td>
+              <td class="col-num">②</td>
+              <td><input type="text" id="bad_debt_base" oninput="calcBadDebt()" onblur="fmt(this)" /></td>
+            </tr>
+            <tr>
+              <td>一括評価 繰入限度額 (②×5.5/1000)</td>
+              <td class="col-num">③</td>
+              <td><input type="text" id="bad_debt_limit" class="readonly" /></td>
+            </tr>
+            <tr style="background: var(--bg-pale)">
+              <td>本年分繰入額 (①+③)</td>
+              <td class="col-num">⑤</td>
+              <td><input type="text" id="bad_debt_total" class="readonly" /></td>
+            </tr>
+          </table>
+        </div>
+
+        <div style="flex: 1.2">
+          <div style="font-size: 12px; font-weight: bold; margin-bottom: 5px">○青色申告特別控除額の計算</div>
+          <table>
+            <tr>
+              <td style="width: 70%">特別控除前の所得金額 (1ページ㊸)</td>
+              <td class="col-num">⑦</td>
+              <td><input type="text" id="p2_income_pre" class="readonly" /></td>
+            </tr>
+            <tr>
+              <td>65万円(又は55万円)と⑦の少ない方</td>
+              <td class="col-num">⑧</td>
+              <td><input type="text" id="p2_deduction" class="readonly" /></td>
+            </tr>
+            <tr style="background: #c8e6c9">
+              <td><b>青色申告特別控除額</b></td>
+              <td class="col-num">⑨</td>
+              <td><input type="text" id="p2_deduction_final" class="readonly" /></td>
+            </tr>
+          </table>
+        </div>
+      </div>
       <div class="footer-num">- 2 -</div>
     </div>
 
@@ -486,6 +613,16 @@
         set("bs_inv_e", f5);
         set("bs_income", f43);
         sumBS();
+        // --- ここから追記：2ページ目（内訳計算・特別控除）への連動 ---
+        const incomePre = f43; // 1ページ目の控除前所得
+        set("p2_income_pre", incomePre);
+
+        const limit65 = val(document.getElementById("f44").value); // 特別控除限度額(65万)
+        const deduction = Math.min(Math.max(0, incomePre), limit65);
+
+        set("p2_deduction", deduction);
+        set("p2_deduction_final", deduction);
+        // --- ここまで追記 ---
       }
     </script>
   </body>
