index2.html 表をループで表示

--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <title>Day1/100 コンソールより愛を込めて　５２歳おじのコーディング学習</title>
 </head>
 <body>
-    <h1>Day1/100 コンソールより愛を込めて　５２歳おじのコーディング学習</h1>
+    <h1>Day1/100 コンソールより愛を込めて</h1>
     <p>記念すべき第一日目</p>
     <p id="out1"></p>
     <p id="out2"></p>
